// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ExerciseControlBar > matches snapshot (idle) 1`] = `
<div
  class="ant-space css-dev-only-do-not-override-xogyor ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-_r_h_"
  style="flex-wrap: wrap;"
>
  <div
    class="ant-space-item"
  >
    <span
      class="SelectRoot-sc-13w9l2w-0 gDvuMX"
    >
      <label
        class="SelectLabel-sc-13w9l2w-1 biibIH"
        for="exercise-select"
      >
        Упражнение
      </label>
      <div
        class="ant-select ant-select-outlined SelectStyled-sc-13w9l2w-2 eQkxXv css-var-_r_h_ ant-select-css-var css-dev-only-do-not-override-xogyor ant-select-single ant-select-show-arrow"
      >
        <div
          class="ant-select-content ant-select-content-has-value"
          title="A"
        >
          A
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="off"
            class="ant-select-input"
            id="exercise-select"
            readonly=""
            role="combobox"
            type="search"
            value=""
          />
        </div>
        <div
          class="ant-select-suffix"
        >
          <span
            aria-label="down"
            class="anticon anticon-down"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </div>
      </div>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      aria-label="Старт"
      class="ant-btn css-dev-only-do-not-override-xogyor css-var-_r_h_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Старт
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn css-dev-only-do-not-override-xogyor css-var-_r_h_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Сброс
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      aria-label="Стоп"
      class="ant-btn css-dev-only-do-not-override-xogyor css-var-_r_h_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Стоп
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="SelectRoot-sc-13w9l2w-0 gDvuMX"
    >
      <label
        class="SelectLabel-sc-13w9l2w-1 biibIH"
        for="rest-duration-select"
      >
        Отдых
      </label>
      <div
        class="ant-select ant-select-outlined SelectStyled-sc-13w9l2w-2 eQkxXv css-var-_r_h_ ant-select-css-var css-dev-only-do-not-override-xogyor ant-select-single ant-select-show-arrow"
      >
        <div
          class="ant-select-content ant-select-content-has-value"
          title="1m"
        >
          1m
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="off"
            class="ant-select-input"
            id="rest-duration-select"
            readonly=""
            role="combobox"
            type="search"
            value=""
          />
        </div>
        <div
          class="ant-select-suffix"
        >
          <span
            aria-label="down"
            class="anticon anticon-down"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`ExerciseControlBar > matches snapshot (running) 1`] = `
<div
  class="ant-space css-dev-only-do-not-override-xogyor ant-space-horizontal ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-_r_m_"
  style="flex-wrap: wrap;"
>
  <div
    class="ant-space-item"
  >
    <span
      class="SelectRoot-sc-13w9l2w-0 gDvuMX"
    >
      <label
        class="SelectLabel-sc-13w9l2w-1 biibIH"
        for="exercise-select"
      >
        Упражнение
      </label>
      <div
        class="ant-select ant-select-outlined SelectStyled-sc-13w9l2w-2 eQkxXv css-var-_r_m_ ant-select-css-var css-dev-only-do-not-override-xogyor ant-select-single ant-select-show-arrow ant-select-disabled"
      >
        <div
          class="ant-select-content ant-select-content-has-value"
          title="A"
        >
          A
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="off"
            class="ant-select-input"
            disabled=""
            id="exercise-select"
            readonly=""
            role="combobox"
            type="search"
            value=""
          />
        </div>
        <div
          class="ant-select-suffix"
        >
          <span
            aria-label="down"
            class="anticon anticon-down"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </div>
      </div>
    </span>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      aria-label="Пауза"
      class="ant-btn css-dev-only-do-not-override-xogyor css-var-_r_m_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      type="button"
    >
      <span>
        Пауза
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn css-dev-only-do-not-override-xogyor css-var-_r_m_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      disabled=""
      type="button"
    >
      <span>
        Сброс
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <button
      aria-label="Стоп"
      class="ant-btn css-dev-only-do-not-override-xogyor css-var-_r_m_ ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
      disabled=""
      type="button"
    >
      <span>
        Стоп
      </span>
    </button>
  </div>
  <div
    class="ant-space-item"
  >
    <span
      class="SelectRoot-sc-13w9l2w-0 gDvuMX"
    >
      <label
        class="SelectLabel-sc-13w9l2w-1 biibIH"
        for="rest-duration-select"
      >
        Отдых
      </label>
      <div
        class="ant-select ant-select-outlined SelectStyled-sc-13w9l2w-2 eQkxXv css-var-_r_m_ ant-select-css-var css-dev-only-do-not-override-xogyor ant-select-single ant-select-show-arrow"
      >
        <div
          class="ant-select-content ant-select-content-has-value"
          title="2m"
        >
          2m
          <input
            aria-autocomplete="list"
            aria-expanded="false"
            aria-haspopup="listbox"
            autocomplete="off"
            class="ant-select-input"
            id="rest-duration-select"
            readonly=""
            role="combobox"
            type="search"
            value=""
          />
        </div>
        <div
          class="ant-select-suffix"
        >
          <span
            aria-label="down"
            class="anticon anticon-down"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </div>
      </div>
    </span>
  </div>
</div>
`;
